nationalmortgagenews.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3778,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.57,
  "homepage_snapshot_redirected_domain": "nationalmortgagenews.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060410233050id_/http://www.nationalmortgagenews.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060410233050id_/http%3A//nationalmortgagenews.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nationalmortgagenews.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615040117id_/http%3A//www.nationalmortgagenews.com/privacy",
  "policy_title": "National Mortgage News",
  "policy_url": "nationalmortgagenews.com/privacy",
  "sha1": "61e0cc6eae5e44d407a34e0d4bc83f2d6ebfd2c6",
  "simhash": 10152522671773581961,
  "simhash_updated": false,
  "site_hostname": "nationalmortgagenews.com",
  "site_url": "http://nationalmortgagenews.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615040117",
  "word_count": 610,
  "year": 2006
}

--- a/n/na/nat/nationalmortgagenews.com.html
+++ b/n/na/nat/nationalmortgagenews.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nationalmortgagenews.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210175812id_/http%3A//www.nationalmortgagenews.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nationalmortgagenews.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615040117id_/http%3A//www.nationalmortgagenews.com/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>National Mortgage News</title>
@@ -177,7 +177,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=ros;sz=468x60;ord=59960781020776?" name="frame1" width="468" height="60" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=ros;sz=468x60;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=ros;sz=468x60;ord=59960781022982?" name="frame1" width="468" height="60" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=ros;sz=468x60;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=ros;sz=468x60;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=ros;sz=468x60;abr=!ie;ord=1234567890?" border=0 width="468" height="60"></A>
@@ -269,7 +269,7 @@ document.write('</IFR'+'AME>');
 <img src="http://www.nationalmortgagenews.com/images/buyers_leftnav.gif" width="177" height="24" border="0" title="Buyer's Guide" name="croll"></a><br>
 <a href="http://www.nationalmortgagenews.com/classified/" target="_top" onmouseover="turnOn('droll')" onmouseout="turnOff('droll')">
 <img src="http://www.nationalmortgagenews.com/images/classifieds_leftnav.gif" width="177" height="25" border="0" title="Classified" name="droll"></a><br>
-<a href="http://www.nationalmortgagenews.com/nmn/dcnews.htm" target="_top" onmouseover="turnOn('hroll')" onmouseout="turnOff('hroll')">
+<a href="http://www.nationalmortgagenews.com/washington/" target="_top" onmouseover="turnOn('hroll')" onmouseout="turnOff('hroll')">
 <img src="http://www.nationalmortgagenews.com/images/washington_leftnav.gif" width="177" height="25" border="0" title="Washington News" name="hroll"></a><br>
 <a href="http://www.nationalmortgagenews.com/nmn/comm.htm" target="_top" onmouseover="turnOn('groll')" onmouseout="turnOff('groll')">
 <img src="http://www.nationalmortgagenews.com/images/commercial_leftnav.gif" width="177" height="25" border="0" title="Commercial Mortgage" name="groll"></a><br>
@@ -283,7 +283,7 @@ document.write('</IFR'+'AME>');
 <img src="http://www.nationalmortgagenews.com/images/people_leftnav.gif" width="177" height="25" border="0" title="People" name="e1roll"></a><br>
 <a href="http://www.nationalmortgagenews.com/researchvault/" target="_top" onmouseover="turnOn('e2roll')" onmouseout="turnOff('e2roll')">
 <img src="http://www.nationalmortgagenews.com/images/researchvault_leftnav.gif" width="177" height="25" border="0" title="Research Vault" name="e2roll"></a><br>
-<a href="http://www.nationalmortgagenews.com/nmn/stocks.htm" target="_top" onmouseover="turnOn('lroll')" onmouseout="turnOff('lroll')">
+<a href="http://www.nationalmortgagenews.com/stocks/" target="_top" onmouseover="turnOn('lroll')" onmouseout="turnOff('lroll')">
 <img src="http://www.nationalmortgagenews.com/images/rollovers_r12_c1.gif" width="177" height="25" border="0" title="Mortgage stock information" name="lroll"></a><br>
 <a href="http://www.nationalmortgagenews.com/photogallery/" target="_top" onmouseover="turnOn('kroll')" onmouseout="turnOff('kroll')">
 <img src="http://www.nationalmortgagenews.com/images/photogallery_leftnav.gif" width="177" height="25" border="0" title="Photo Gallery" name="kroll"></a><br>
@@ -338,7 +338,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;sz=165x200;ord=59960781020776?" name="frame1" width="165" height="200" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;sz=165x200;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;sz=165x200;ord=59960781022982?" name="frame1" width="165" height="200" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;sz=165x200;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;sz=165x200;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;sz=165x200;abr=!ie;ord=1234567890?" border=0 width="165" height="200"></A>
@@ -477,7 +477,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');  
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=1;ord=59960781020776?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=1;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=1;ord=59960781022982?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=1;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=home;sz=165x150;tile=1;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=home;sz=165x150;tile=1;abr=!ie;ord=1234567890?" border=0 width="165" height="150"></A>
@@ -497,7 +497,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');  
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=2;ord=59960781020776?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=2;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=2;ord=59960781022982?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=2;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=home;sz=165x150;tile=2;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=home;sz=165x150;tile=2;abr=!ie;ord=1234567890?" border=0 width="165" height="150"></A>
@@ -517,7 +517,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');  
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=3;ord=59960781020776?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=3;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=3;ord=59960781022982?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=3;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=home;sz=165x150;tile=3;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=home;sz=165x150;tile=3;abr=!ie;ord=1234567890?" border=0 width="165" height="150"></A>
@@ -536,7 +536,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');  
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=4;ord=59960781020776?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=4;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=4;ord=59960781022982?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=4;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=home;sz=165x150;tile=4;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=home;sz=165x150;tile=4;abr=!ie;ord=1234567890?" border=0 width="165" height="150"></A>
@@ -556,7 +556,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');  
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=5;ord=59960781020776?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=5;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=5;ord=59960781022982?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=5;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=home;sz=165x150;tile=5;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=home;sz=165x150;tile=5;abr=!ie;ord=1234567890?" border=0 width="165" height="150"></A>
@@ -576,7 +576,7 @@ document.write('<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/
 document.write('</SCR'+'IPT>'); 
 document.write('</IFR'+'AME>');  
 //--> 
-</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=6;ord=59960781020776?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=6;abr=!ie;ord=59960781020776?"></SCRIPT></iframe> 
+</script><iframe src="http://ad.doubleclick.net/adi/nationalmortgagenews.com/;pg=home;sz=165x150;tile=6;ord=59960781022982?" name="frame1" width="165" height="150" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/nationalmortgagenews.com/;pg=home;sz=165x150;tile=6;abr=!ie;ord=59960781022982?"></SCRIPT></iframe> 
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/nationalmortgagenews.com/;pg=home;sz=165x150;tile=6;abr=!ie;ord=1234567890?"><IMG SRC="http://ad.doubleclick.net/ad/nationalmortgagenews.com/;pg=home;sz=165x150;tile=6;abr=!ie;ord=1234567890?" border=0 width="165" height="150"></A>
@@ -626,7 +626,7 @@ document.write('</IFR'+'AME>');
 <tr><td align="middle"><img src="http://www.nationalmortgagenews.com/images/spacer.gif" width="10" height="1" border="0">
 
 <span class="copyright">
-	© 2005 <i>National Mortgage News</i> and SourceMedia, Inc. All rights reserved.
+	© 2006 <i>National Mortgage News</i> and SourceMedia, Inc. SourceMedia is an <a href="http://www.nationalmortgagenews.com/investcorp/">Investcorp</a> company.  All rights reserved.
 	<br>
 	For <b>technical support</b> e-mail <a class="link" href="mailto:webmaster@nationalmortgagenews.com">webmaster@nationalmortgagenews.com</a>.
 	<br>
