--- a/e/ex/exp/experts-exchange.com.html
+++ b/e/ex/exp/experts-exchange.com.html
@@ -1,20 +1,20 @@
-<!--The following is the downloaded HTML source of the experts-exchange.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215192907id_/http%3A//www.experts-exchange.com/privacyPolicy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the experts-exchange.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615040322id_/http%3A//www.experts-exchange.com/privacyPolicy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <title>Privacy Policy for Experts Exchange</title>
   <link href="/images/ee.ico" rel="shortcut icon">
-  <link href="/scripts/ee.css" rel="stylesheet" type="text/css">
-  <script src="/scripts/eeSubs.1.js" type="text/javascript"></script>
+  <link href="/scripts/ee_fed55cd06ed3951923c36052c29bfc52.css" rel="stylesheet" type="text/css">
+  <script src="/scripts/eeSubs_88fcb4c868a5c02661171720cf388b79.js" type="text/javascript"></script>
 </head>
 <body>
 
 <table class="fullWidth">
   <tbody><tr>
     <td rowspan="2" class="logoLeft">
-      <img src="/b.gif" width="300" height="1">
-      December 15, 2005 - 11:29AM PST</td>
+<img src="/b.gif" width="300" height="75">
+      June 14, 2006 - 09:03PM PDT</td>
 
     <td class="bgLogoRight">
       <table class="fullWidth">
@@ -59,19 +59,21 @@
     <td colspan="2">
       <table class="fullWidth">
         <tbody><tr>
+          <td class="hackerFloater">
+</td>
           <td class="memberLinks">
             <ul>
 <li class="first">
 
-  <a rel="nofollow" href="/login.jsp?redirectURL=%2FprivacyPolicy.jsp" class="memberLink">Login</a>
+  <a href="/login.jsp?redirectURL=%2FprivacyPolicy.jsp" class="memberLink">Login</a>
 </li>
 <li>
 
-  <a rel="nofollow" href="https://secure.experts-exchange.com/register.jsp?redirectURL=%2FprivacyPolicy.jsp&amp;rsid=60" class="memberLink">Sign Up</a>
+  <a href="https://secure.experts-exchange.com/register.jsp?redirectURL=%2FprivacyPolicy.jsp&amp;rsid=60" class="memberLink">Sign Up</a>
 </li>
 <li class="last">
 
-  <a rel="nofollow" href="/forgotPassword.jsp" class="memberLink">Forgot Password</a>
+  <a href="/forgotPassword.jsp" class="memberLink">Forgot Password</a>
 </li>
 </ul>
 </td>
@@ -102,6 +104,7 @@
 </td>
   </tr>
   </tbody></table>
+
 <center>
 <div style="background-image:url(/images/gradientInverted.gif);background-repeat:repeat-x;padding-top:10px;padding-bottom:10px;">
 <table id="bannerAd" style="margin:0px;">
@@ -110,12 +113,12 @@
        <!-- TF 468x60 JScript HORIZ code -->
 <div style="z-index: 1; margin: 0px 0px 0px 0px;">
 <script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&adSpace=ROS&size=468x60&type=horiz&noAd=1&requestID=1109575234"></scr'+'ipt>');
+document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&adSpace=ROS&size=468x60&type=horiz&noAd=1&requestID=110962406"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;noAd=1&amp;requestID=1109575234"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;noAd=1&amp;requestID=110962406"></script>
 <noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=ExpertsExchange&adSpace=ROS&size=468x60&requestID=1109575234" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=ExpertsExchange&adSpace=ROS&size=468x60&requestID=1109575234" 
+   <a href="http://a.tribalfusion.com/i.click?site=ExpertsExchange&adSpace=ROS&size=468x60&requestID=110962406" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=ExpertsExchange&adSpace=ROS&size=468x60&requestID=110962406" 
                   width=468 height=60 border=0 alt="Click Here"></a>
 </noscript>
 </div>
@@ -134,12 +137,12 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
     <td align="center">
 <!-- TF 120x600/160x600 JScript code -->
 <center><script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&adSpace=ROS&size=160x600&type=var&noAd=1&requestID=1412775916"></scr'+'ipt>');
+document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&adSpace=ROS&size=160x600&type=var&noAd=1&requestID=1019045684"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;noAd=1&amp;requestID=1412775916"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;noAd=1&amp;requestID=1019045684"></script>
 <noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=ExpertsExchange&adSpace=ROS&size=120x600&type=var&requestID=1412775916" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=ExpertsExchange&adSpace=ROS&size=120x600&requestID=1412775916" 
+   <a href="http://a.tribalfusion.com/i.click?site=ExpertsExchange&adSpace=ROS&size=120x600&type=var&requestID=1019045684" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=ExpertsExchange&adSpace=ROS&size=120x600&requestID=1019045684" 
                   width=120 height=600 border=0 alt="Click Here"></a>
 </noscript>
 </center>
@@ -218,15 +221,14 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
   </ul>
 </div>
 <br>
-              
+
        <div class="searchBar">
   <form onsubmit="return submitOnce();" name="searchForm" method="GET" action="http://search.experts-exchange.com/search.jsp">
     <table>
       <tbody><tr>
         <td>
-
-          Search 1,428,713 Solutions
-</td>
+          Search 1,617,691 Solutions
+        </td>
         <td class="wide">
           <input type="text" name="query" size="20" maxlength="255" value="">
         </td>
@@ -247,7 +249,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
     </tbody></table>
   </form>
 </div>
-<table class="fullWidth">   
+<table class="fullWidth">
           <tbody><tr>
           <td>
           <div style="padding-top:10px"></div>
@@ -274,7 +276,7 @@ ify;">
            </p>
            <p align="justify">
              <b>Use of Cookies</b><br>
-             Our site uses cookies to keep track of your member session. We use cookies to save your password so you do not have to re-enter it each time you visit our site.
+             Our site uses cookies to keep track of your member session. We use cookies to save your encrypted password so you do not have to re-enter it each time you visit our site.
            </p>
            <p align="justify">
              <b>Registration</b><br>
@@ -438,8 +440,17 @@ ify;">
 </div></td>
     <td valign="top" class="column">
 <table class="fW"><tbody><tr><td class="bTl"><img src="/b.gif" width="10" height="10"></td><td class="bT"></td><td class="bTr"></td></tr><tr><td class="bL"></td><td class="bM">
+<div class="tenYears">
+  <img src="/images/10Years.gif" alt="Celebrating a decade of solutions">
+</div>
+</td><td class="bRR"></td></tr><tr><td class="bBl"></td><td class="bB"></td><td class="bBr"><img src="/b.gif" width="10" height="10"></td></tr></tbody></table>
+<table class="fW"><tbody><tr><td class="bTl"><img src="/b.gif" width="10" height="10"></td><td class="bT"></td><td class="bTr"></td></tr><tr><td class="bL"></td><td class="bM">
 <div class="expertAwards2006">
-  <img src="/images/expertAwards2006.gif" alt="Expert Awards 2006">
+  <a href="/expertAwards2006.jsp"><img src="/images/expertAwards2006Button.gif" alt="Expert Awards 2006"></a>
+  <img src="/images/presentedBy.gif" alt="presented by">
+  <div class="eaSponsor">
+<a href="/expertAwards2006.jsp"><img src="/images/eaSponsor.gif" alt="Experts Exchange"></a>
+</div>
 </div>
 </td><td class="bRR"></td></tr><tr><td class="bBl"></td><td class="bB"></td><td class="bBr"><img src="/b.gif" width="10" height="10"></td></tr></tbody></table>
 <table class="fW"><tbody><tr><td class="bTl"><img src="/b.gif" width="10" height="10"></td><td class="bT"></td><td class="bTr"></td></tr><tr><td class="bL"></td><td class="bM">
@@ -516,12 +527,12 @@ ify;">
 </td><td class="bRR"></td></tr><tr><td class="bBl"></td><td class="bB"></td><td class="bBr"><img src="/b.gif" width="10" height="10"></td></tr></tbody></table>
 <!-- TF 120x60 JScript code -->
 <center><script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&adSpace=ROS&size=120x60&noAd=1&requestID=430834847"></scr'+'ipt>');
+document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&adSpace=ROS&size=120x60&noAd=1&requestID=1687616307"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&amp;adSpace=ROS&amp;size=120x60&amp;noAd=1&amp;requestID=430834847"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExpertsExchange&amp;adSpace=ROS&amp;size=120x60&amp;noAd=1&amp;requestID=1687616307"></script>
 <noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=ExpertsExchange&adSpace=ROS&size=120x60&requestID=430834847" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=ExpertsExchange&adSpace=ROS&size=120x60&requestID=430834847" 
+   <a href="http://a.tribalfusion.com/i.click?site=ExpertsExchange&adSpace=ROS&size=120x60&requestID=1687616307" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=ExpertsExchange&adSpace=ROS&size=120x60&requestID=1687616307" 
                   width=120 height=60 border=0 alt="Click Here"></a>
 </noscript>
 </center>
@@ -531,7 +542,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 <table class="fullWidth">
   <tbody><tr>
     <td align="center">
-<a rel="nofollow" href="premiumServices.jsp?redirectURL=%2FprivacyPolicy.jsp"><img src="/images/psBlue.gif" width="155" height="32" alt="Upgrade to Premium Services"></a>
+<a rel="nofollow" href="premiumServices.jsp?redirectURL=%2FprivacyPolicy.jsp"><img src="/images/psPurple.gif" width="155" height="32" alt="Upgrade to Premium Services"></a>
 </td>
   </tr>
 </tbody></table>
@@ -570,7 +581,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
   </tr>
   <tr>
     <td align="center">
-      Copyright © Experts Exchange LLC 2005. All rights reserved.
+      Copyright © Experts Exchange LLC 2006. All rights reserved.
     </td>
   </tr>
 </tbody></table>
@@ -583,6 +594,6 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 
 
-<!-- www1.experts-exchange.com:80 --> 
+<!-- www2.experts-exchange.com:80 -->
 
 </body></html>
