--- a/p/ps/psx/psxextreme.com.html
+++ b/p/ps/psx/psxextreme.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the psxextreme.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218155655id_/http%3A//www.psxextreme.com/home/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the psxextreme.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615040412id_/http%3A//www.psxextreme.com/home/privacy_policy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>
@@ -29,6 +29,7 @@
 		<td nowrap=""><font style="font-family:tahoma;font-size:11px;font-weight:bold;letter-spacing:1px">&nbsp;&nbsp;Privacy Policy</font></td>
 		<td nowrap="" align="right" class="tdblue">&nbsp;<a class="menu" href="/">Home</a>&nbsp;| <a class="psxmenu" href="/home/ps.asp">PS1</a> |&nbsp;<a class="psxmenu" href="/home/ps2.asp">PS2</a>&nbsp;|&nbsp;<a class="psxmenu" href="/home/playstation-3.asp">PS3</a> |&nbsp;<a class="psxmenu" href="/home/sony-psp.asp">PSP</a>&nbsp;|&nbsp;<a class="xboxmenu" href="http://www.xboxnerds.com/Xbox/">XBOX</a> 
 | <a class="xboxmenu" href="http://www.xboxnerds.com/Xbox-360/">XBOX 360</a> |&nbsp;<a class="menu" href="http://www.psxextremeforums.com">Forums</a>&nbsp;<img src="/img/s.gif" width="13" height="1">
+
 </td>
 		</tr></tbody></table></td></tr>
 	</tbody></table></td></tr></tbody></table>
@@ -45,9 +46,7 @@
 		<tbody><tr>
 		<td><a href="/"><img src="/img/logo_small.gif" width="250" height="50" border="0" alt="Playstation, Playstation 2, Sony PSP, Playstation 3 news, cheat codes, walkthroughs, reviews, screenshots &amp; much more"></a></td>
 		<td align="right" nowrap="" height="25" width="100%">
-		<a href="http://www.psxextreme.com/scripts/nl/nl.asp">
-<img border="0" src="../../images/win_ps3_01a.gif" width="250" height="50"></a>
-
+		
 		</td>
 		<td><img src="/img/spacer.gif" width="3" height="1"></td>
 		</tr>
@@ -85,7 +84,7 @@ rnum=Math.round(Math.random() * 100000);
 
 document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/v=2.0S/sz=468x60A|728x90A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
 
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/v=2.0S/sz=468x60A|728x90A/23023/RETURN-CODE/JS/"></script>
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/v=2.0S/sz=468x60A|728x90A/37458/RETURN-CODE/JS/"></script>
 <noscript><a href="http://www.burstnet.com/ads/ad9325a-map.cgi/ns/v=2.0S/sz=468x60A|728x90A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/ns/v=2.0S/sz=468x60A|728x90A/" border="0" alt="Click Here"></a>
 </noscript>
@@ -141,6 +140,10 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
 		<td width="119"><a href="/scripts/scrs2/scrs.asp" class="menu">PS2 Screenshots</a></td>
 </tr>
+<tr>
+		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
+		<td width="119"><a href="/scripts/ps2-videos/videos.asp" class="menu">PS2 Videos</a></td>
+</tr>
 	</tbody></table></div></td>
 	 <td class="tdwndbrd"><img src="/img/spacer.gif" width="1" height="1"></td>
 	 </tr>
@@ -153,7 +156,7 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 	<table cellspacing="0" cellpadding="0" border="0" width="130">
 	 <tbody><tr>
 	 <td class="tdwndbrd"><img src="/img/spacer.gif" width="1" height="1"></td>
-	 <td valign="top" class="tdwndhdrl" height="24" nowrap=""><div class="wndhdr"><a href="/home/sony-psp.asp" class="wndhdrlnk">PSP</a></div></td>
+	 <td valign="top" class="tdwndhdrl" height="24" nowrap=""><div class="wndhdr"><a href="/home/sony-psp.asp" class="wndhdrlnk">Sony PSP</a></div></td>
 	 <td><table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><img src="/img/spacer.gif" width="1" height="11"></td></tr><tr><td class="tdwndbrd"><img src="/img/spacer.gif" width="1" height="13"></td></tr></tbody></table></td>
 	 </tr>
 	 <tr>
@@ -182,6 +185,10 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 <tr>
 		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
 		<td width="119"><a href="/scripts/scrs3/scrs.asp" class="menu">PSP Screenshots</a></td>
+</tr>
+<tr>
+		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
+		<td width="119"><a href="/scripts/psp-videos/videos.asp" class="menu">PSP Videos</a></td>
 </tr>
 <tr>
 		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
@@ -232,6 +239,10 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 <tr>
 		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
 		<td width="119"><a href="/scripts/ps3-scrs/scrs.asp" class="menu">PS3 Screenshots</a></td>
+</tr>
+<tr>
+		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
+		<td width="119"><a href="/scripts/ps3-videos/videos.asp" class="menu">PS3 Videos</a></td>
 </tr>
 	</tbody></table></div></td>
 	 <td class="tdwndbrd"><img src="/img/spacer.gif" width="1" height="1"></td>
@@ -303,7 +314,7 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 </tr>
 <tr>
 		<td height="15" valign="top"><img src="/img/mb.gif" width="12" height="12"></td>
-		<td width="119"><a href="http://www.gamingtrivia.com/gt/home/default.asp?tr=psxmenu" target="_blank" class="menu">Gaming Trivia</a></td>
+		<td width="119"><a href="http://www.gamingtrivia.com" target="_blank" class="menu">Gaming Trivia</a></td>
 </tr>
 	</tbody></table></div></td>
 	 <td class="tdwndbrd"><img src="/img/spacer.gif" width="1" height="1"></td>
@@ -418,6 +429,9 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 	<!--middle col begin-->
 
 
+
+
+
 	<table cellspacing="0" cellpading="0" border="0" width="100%">
 	<tbody><tr>
 	<td height="22" width="18" valign="top" class="tdMwndhdr"><div class="Mwndhdr"><img src="/img/sb.gif" width="18" height="12"></div></td>
@@ -425,15 +439,17 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/
 	<td width="15" valign="top" align="right" class="tdMwndhdr"><img src="/img/rb.gif" width="15" height="10"></td>
 	</tr></tbody></table>
 	 <center>
+
 <!-- BEGIN RICH-MEDIA BURST! CODE -->
 <script language="JavaScript">
 rnum=Math.round(Math.random() * 100000);
 document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/v=2.0S/sz=300x250A/NZ/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/v=2.0S/sz=300x250A/NZ/51151/RETURN-CODE/JS/"></script>
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/v=2.0S/sz=300x250A/NZ/15845/RETURN-CODE/JS/"></script>
 <noscript><a href="http://www.burstnet.com/ads/ad9325a-map.cgi/ns/v=2.0S/sz=300x250A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad9325a.cgi/ns/v=2.0S/sz=300x250A/" border="0" alt="Click Here"></a>
 </noscript>
 <!-- END BURST CODE -->
+
 </center><br>
 	PSX Extreme has created this privacy statement in order to 
 demonstrate our firm commitment to privacy. The following discloses the 
@@ -560,16 +576,21 @@ site, or your dealings with this Web site, you can contact:<br>webmaster [at] ps
 <script language="JavaScript">
 rnum=Math.round(Math.random() * 100000);
 document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/sk9325a.cgi/v=2.0S/sz=120x600A|160x600A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/sk9325a.cgi/v=2.0S/sz=120x600A|160x600A/1524/RETURN-CODE/JS/"></script>
+</script><script src="http://www.burstnet.com/cgi-bin/ads/sk9325a.cgi/v=2.0S/sz=120x600A|160x600A/63522/RETURN-CODE/JS/"></script>
 <noscript><a href="http://www.burstnet.com/ads/sk9325a-map.cgi/ns/v=2.0S/sz=120x600A|160x600A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/sk9325a.cgi/ns/v=2.0S/sz=120x600A|160x600A/" border="0" alt="Click Here"></a>
 </noscript>
 <!-- END BURST CODE -->
 
+
+<br>
+<br>
+<a target="_blank" href="http://www.walkamerica.org?kbid=1125&amp;img=walk1_120_90.gif">
+<img src="http://66.192.130.92/marchdim/walk1_120_90.gif" border="0"></a>
+<img src="http://www.marchofdimesaffiliates.com/showban.asp?id=1125&amp;img=walk1_120_90.gif" border="0">
+
  </center>
 <br>
-<br>
-
 	</div></td>
 	 <td class="tdwndbrd"><img src="/img/spacer.gif" width="1" height="1"></td>
 	 </tr>
@@ -597,21 +618,9 @@ document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/sk9325a.cgi/
 	<td colspan="7"><table cellspacing="0" cellpadding="1" border="0" width="772" height="43" class="tdwndbrd"><tbody><tr>
 <td><table cellspacing="0" cellpadding="2" border="0" width="770" height="41" class="tdwndcnt">
 
-		<tbody><tr><td align="center"><script type="text/javascript"><!--
-google_ad_client = "pub-4468969586548790";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-google_ad_channel ="0455104210";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "FF0000";
-google_color_url = "1F5184";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></td></tr>
+		<tbody><tr><td align="center"><a target="_blank" href="http://www.walkamerica.org?kbid=1125&amp;img=walk728x90.gif">
+<img src="http://66.192.130.92/marchdim/walk728x90.gif" border="0"></a>
+<img src="http://www.marchofdimesaffiliates.com/showban.asp?id=1125&amp;img=walk728x90.gif" border="0"></td></tr>
 	</tbody></table></td></tr></tbody></table>
 </td>
 </tr>
@@ -625,6 +634,7 @@ google_color_text = "000000";
 		<td nowrap=""><font style="font-family:tahoma;font-size:11px;font-weight:bold;letter-spacing:1px">&nbsp;&nbsp;Privacy Policy</font></td>
 		<td nowrap="" align="right" class="tdblue">&nbsp;<a class="menu" href="/">Home</a>&nbsp;| <a class="psxmenu" href="/home/ps.asp">PS1</a> |&nbsp;<a class="psxmenu" href="/home/ps2.asp">PS2</a>&nbsp;|&nbsp;<a class="psxmenu" href="/home/playstation-3.asp">PS3</a> |&nbsp;<a class="psxmenu" href="/home/sony-psp.asp">PSP</a>&nbsp;|&nbsp;<a class="xboxmenu" href="http://www.xboxnerds.com/Xbox/">XBOX</a> 
 | <a class="xboxmenu" href="http://www.xboxnerds.com/Xbox-360/">XBOX 360</a> |&nbsp;<a class="menu" href="http://www.psxextremeforums.com">Forums</a>&nbsp;<img src="/img/s.gif" width="13" height="1">
+
 </td>
 		</tr></tbody></table></td></tr>
 	</tbody></table></td></tr></tbody></table>
@@ -636,7 +646,19 @@ google_color_text = "000000";
 
 </tbody></table>
 
+ <p align="center"><a target="_blank" href="http://www.psxextreme.com/rss/">
+<img border="0" src="http://www.psxextreme.com/img/rss.gif"></a>&nbsp;
+	<a target="_blank" href="http://fusion.google.com/add?feedurl=http://www.psxextreme.com/rss/">
+	<img border="0" src="http://www.psxextreme.com/img/rssgoogle.gif" width="104" height="17"></a>&nbsp;
+	<a target="_blank" href="http://add.my.yahoo.com/rss?url=http://www.psxextreme.com/rss/">
+	<img border="0" src="http://www.psxextreme.com/img/rssyahoo.gif" width="91" height="17"></a>&nbsp;
+	<a target="_blank" href="http://www.newsgator.com/ngs/subscriber/subext.aspx?url=http://www.psxextreme.com/rss/">
+	<img border="0" src="http://www.psxextreme.com/img/rssnewgator.gif" width="91" height="17"></a></p>
+ 
+ 
+ 
 <p align="center"><font face="Arial" size="2">Popular Sections:
+<a href="http://www.psxextreme.com/scripts/cheats3/cheats.asp">PSP Cheats</a> |
 <a href="http://www.psxextreme.com/scripts/cheats2/cheats.asp">PS2 Cheats</a> 
 | <a href="http://www.psxextreme.com/scripts/guides2/guides.asp">PS2 
 Walkthroughs</a> |
@@ -646,7 +668,9 @@ Reviews</a> | <a href="http://www.psxextreme.com/home/sony-psp.asp">Sony PSP</a>
 <a href="http://www.psxextreme.com/scripts/misc/misc.asp?MiscID=88">PS3 Release 
 Date</a> | <a href="http://www.psxextreme.com/home/psp-wallpapers.asp">PSP Wallpapers</a> |
 <a href="http://www.psxextreme.com/home/psp-downloads.asp">PSP Downloads</a> |
-<a href="http://www.xboxnerds.com/Xbox-360/cheats/">Xbox 360 Cheats</a></font></p>
+<a href="http://www.psxextreme.com/home/psp-movies.asp">PSP Movies</a> |
+<a href="http://www.psxextreme.com/home/psp-accessories.asp">PSP Accessories</a> 
+| <a href="http://www.xboxnerds.com/Xbox-360/cheats/">Xbox 360 Cheats</a></font></p>
 <p align="center"><font face="Arial" size="2">Popular Cheats: 
 <a href="http://www.psxextreme.com/scripts/cheats3/cheat.asp?CheatID=28">Grand 
 Theft Auto: Liberty City Stories Cheats</a> |
@@ -654,22 +678,30 @@ Theft Auto: Liberty City Stories Cheats</a> |
 San Andreas Cheats</a> |
 <a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=428">NBA 
 Live 06 Cheats</a> |
-<a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=406">Juiced 
-Cheats</a><br>
+<a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=315">
+Spiderman 2 Cheats</a><br>
 <a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=442">
 Resident Evil 4 Cheats</a> |
 <a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=441">Soul 
 Calibur 3 Cheats</a> |
-<a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=439">Dragon 
-Ball Z Budokai: Tenkaichi Cheats</a> |
-<a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=315">
-Spiderman 2 Cheats</a> |
 <a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=449">50 
-Cent: Bulletproof Cheats</a></font></p>
-<p align="center"><font size="2" face="Arial">Sponsor Links: 
+Cent: Bulletproof Cheats</a> |
+<a href="http://www.psxextreme.com/scripts/cheats3/cheat.asp?CheatID=44">King 
+Kong Cheats</a> |
+<a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=439">Dragon 
+Ball Z Budokai: Tenkaichi Cheats</a><br>
+<a href="http://www.psxextreme.com/scripts/cheats3/cheat.asp?CheatID=43">WWE 
+Smackdown vs. Raw 2006 Cheats</a> |
+<a href="http://www.psxextreme.com/scripts/cheats3/cheat.asp?CheatID=45">SOCOM: 
+Fireteam Bravo Cheats</a> |
+<a href="http://www.psxextreme.com/scripts/cheats3/cheat.asp?CheatID=42">Need 
+For Speed: Most Wanted Cheats</a> |
+<a href="http://www.psxextreme.com/scripts/cheats2/cheat.asp?CheatID=406">Juiced 
+Cheats</a></font></p>
+<p align="center"><font face="Arial" size="2">Sponsor Links: 
 <a href="http://www.mediataskmaster.com/co/netflix/dvd_rental">DVD Rental</a> |
 <a href="http://www.mediataskmaster.com/co/ColumbiaHouse/offers/dvd_club.asp">
-Columbia House DVD Club</a> | <a href="http://www.modchip.com">Mod chip</a></font></p>
+Columbia House DVD Club</a></font></p>
 <p align="center"><font face="Arial"><font size="2">Related Sites:
 <a href="http://www.pscheats.com">PS2 Cheat Codes</a> |
 <a href="http://www.psp-cheats.com">PSP Cheats</a> |
@@ -678,7 +710,7 @@ Columbia House DVD Club</a> | <a href="http://www.modchip.com">Mod chip</a></fon
 | <a href="http://www.xbox-cheats-codes.com/">Xbox Cheats</a> |
 <a href="http://www.gamerankings.com">Game Rankings</a><br>
 Copyright 1999-Present <a href="http://www.poisemedia.com">Poise Media Inc.</a> 
-All rights reserved.<img alt="Playstation 2 cheats PS2 cheats Playstation codes Playstation 2 codes Playstation cheat codes Playstation 2 cheat codes PS2 cheat codes guides walkthrough strategy playstation game ps2 game" src="http://www.psxextreme.com/img/spacer.gif" border="0" width="1" height="1"><a style="color: #334799" href="http://www.playstation-2-cheats-codes.com/home/default.asp"><img src="http://www.psxextreme.com/img/spacer.gif" border="0" width="1" height="1"></a></font><a style="color: #334799" href="http://www.pscheats.com"><font size="2"><img src="http://www.psxextreme.com/img/spacer.gif" border="0" width="1" height="1"></font></a></font></p>
+All rights reserved.</font></font></p>
 <p>
 <img border="0" src="http://www.psxextreme.com/scripts/advtrace/advtrace.asp?url=http://www.psxextreme.com/img/spacer.gif?sid=PSX_PVcounter_footer"></p>
 
