--- a/r/re/res/resortsandlodges.com.html
+++ b/r/re/res/resortsandlodges.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the resortsandlodges.com privacy policy that was archived on 2005-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051204020043id_/http%3A//www.resortsandlodges.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the resortsandlodges.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615040606id_/http%3A//resortsandlodges.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Privacy Policy - Resorts and Lodges</title>
@@ -10,7 +10,8 @@
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.resortsandlodges.com&quot; r (nz 1 vz 1 lz 1 oz 1 cz 1))">
 	<script type="text/javascript" src="/includes/javascript/__utm.js"></script><script language="JavaScript1.5">_ujv='1.5';</script>
-<link rel="stylesheet" type="text/css" href="/includes/css/styles_v5.css">
+<link rel="stylesheet" type="text/css" href="/includes/css/styles_v6.css">
+
 </head>
 
 <body>
@@ -38,12 +39,13 @@
 <div id="nav">
 	<div id="mainNavContent">
 		<div><a href="/">Home</a><br></div>
-		<div><a href="/cars.html">Cars</a><br></div>
+		<!-- <div><a href="/cars.html">Cars</a><br></div> -->
 		<div><a href="/resort_directory.html">Resort Guide</a><br></div>
 		<div><a href="/incredideals.html">incrediDEALS™</a><br></div>
 		<div><a href="/top_destinations.html">Top Destinations</a><br></div>
 		<div><a href="/vacation_packages.html">Vacation Packages</a><br></div>
 		<div><a href="/cruise_packages.html">Cruise Packages</a><br></div>
+		<div><a href="/travel-magazine.html">Travel Magazine</a><br></div>
 	</div>
 </div>
 
@@ -53,7 +55,7 @@
 		
 		<div id="pageinfo">
 			<h1>Privacy Policy</h1>
-			<p class="text-s">You're Here: <a href="/index.html" class="link-s">Home</a> <img src="/images/icons/bluearrow.gif" width="8" height="8"> <a href="/privacy-policy.html" class="link-s">Privacy Policy</a></p>
+			<p class="text-s">You're Here: <a href="/" class="link-s">Home</a> <img src="/images/icons/bluearrow.gif" width="8" height="8"> <a href="/privacy-policy.html" class="link-s">Privacy Policy</a></p>
 		</div>
 	
 		<div id="fullcol-wrapper">
@@ -127,7 +129,7 @@
 		
 		<div class="clear"></div>		
 			<div id="footer">
-		<p><a href="/about-us.html">About Us</a> &nbsp;|&nbsp; <a href="/contact-us.html">Contact Us</a> &nbsp;|&nbsp; <a href="/advertising/index.html">Partner with Us</a> &nbsp;|&nbsp; <a href="/link-to-us.html">Link to Us</a> &nbsp;|&nbsp; <a href="/terms-of-use.html">Terms of Use</a> &nbsp;|&nbsp; <a href="/privacy-policy.html">Privacy Policy</a> &nbsp;|&nbsp; <a href="/sitemap.html">Site Map</a> &nbsp;|&nbsp; <a href="/marketingcenter/">Marketing Center</a></p>
+		<p><a href="/about-us.html">About Us</a> &nbsp;|&nbsp; <a href="/contact-us.html">Contact Us</a> &nbsp;|&nbsp; <a href="/advertising/">Partner with Us</a> &nbsp;|&nbsp; <a href="/link-to-us.html">Link to Us</a> &nbsp;|&nbsp; <a href="/terms-of-use.html">Terms of Use</a> &nbsp;|&nbsp; <a href="/privacy-policy.html">Privacy Policy</a> &nbsp;|&nbsp; <a href="/sitemap.html">Site Map</a> &nbsp;|&nbsp; <a href="/marketingcenter/">Marketing Center</a></p>
 		<p class="text-s">The names and logos listed above are the registered marks of their respective companies.<br>Copyright © 1998-2005 <a href="http://www.travelnetsolutions.com" class="link-s">TravelNet Solutions, Inc.</a> and its content providers. All rights reserved.</p>
 	</div>
 	
