--- a/s/si/sig/sign-up.to.html
+++ b/s/si/sig/sign-up.to.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sign-up.to privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220024008id_/http%3A//www.sign-up.to/html/consumer/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sign-up.to privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615040835id_/http%3A//sign-up.to/html/consumer/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><link rel="Stylesheet" type="text/css" href="styles/suto.css">
 <title>Sign-Up.to &gt;&gt; Privacy Policy</title>
