freeringers.net (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3384,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.22,
  "homepage_snapshot_redirected_domain": "freeringers.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060406002808id_/http://www.freeringers.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060406002808id_/http%3A//freeringers.net",
  "interval": "2006_A",
  "link_text": "Privacy Notice",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "freeringers.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615041137id_/http%3A//www.freeringers.net/privacy.php",
  "policy_title": "Privacy Notice > FreeRingers.net",
  "policy_url": "freeringers.net/privacy.php",
  "sha1": "25ca1bc5d1088626488bce28d0f3e45e065d86f2",
  "simhash": 4219347290631676257,
  "simhash_updated": false,
  "site_hostname": "freeringers.net",
  "site_url": "http://freeringers.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615041137",
  "word_count": 543,
  "year": 2006
}

--- a/f/fr/fre/freeringers.net.html
+++ b/f/fr/fre/freeringers.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeringers.net privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219102711id_/http%3A//www.freeringers.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeringers.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615041137id_/http%3A//www.freeringers.net/privacy.php) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Notice &gt; FreeRingers.net</title>
 <meta name="description" content="FreeRingers.net provides unlimited free ringtones, images, screensavers, and more. You can send your own custom ringtones and wallpaper to your phone.">
@@ -7,6 +7,9 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon">
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <link href="http://img.freeringers.net/stylesheet2.css" rel="stylesheet" type="text/css">
+<style type="text/css"><!--
+.ad1 { font-family: arial; text-decoration: none; color: blue; font-size: 18px; cursor: hand; }
+//--></style>
 <script type="text/javascript">
 function OpenBrWindow(theURL,winName,features, myWidth, myHeight, isCenter) {
   if(window.screen)if(isCenter)if(isCenter=="true"){
@@ -35,120 +38,57 @@ document.write(pm_tag);
 // -->
 </script><script language="JavaScript" src="//srv.perf.overture.com/collweb/ScriptServlet?ver=1.4&amp;aid=O3NQI6J92BQOQM2B78CVG78KJ4"></script>
 
-</head><body background="http://img.freeringers.net/images/bg1.gif" bgcolor="#FFFFFF" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="10" marginwidth="0" marginheight="0">
+</head><body background="http://img.freeringers.net/images/bg1.gif" bgcolor="#FFFFFF" leftmargin="0" rightmargin="0" topmargin="10" bottommargin="10" marginwidth="0" marginheight="10">
 <center>
-<table width="777" cellspacing="0" cellpadding="4" border="0"><tbody><tr><td colspan="2" nowrap="">
-<map name="cellmap">
-<area shape="rect" coords="0,0,70,20" href="/sprint.php">
-<area shape="rect" coords="70,0,141,20" href="/verizon.php">
-<area shape="rect" coords="141,0,212,20" href="/cellularone.php">
-<area shape="rect" coords="212,0,283,20" href="/cincinnati.php">
-<area shape="rect" coords="283,0,354,20" href="/rogers.php">
-<area shape="rect" coords="354,0,424,20" href="/mts.php">
-<area shape="rect" coords="0,20,70,41" href="/cingular.php">
-<area shape="rect" coords="70,20,141,41" href="/tmobile.php">
-<area shape="rect" coords="141,20,212,41" href="/suncom.php">
-<area shape="rect" coords="212,20,283,41" href="/rcc.php">
-<area shape="rect" coords="283,20,354,41" href="/fido.php">
-<area shape="rect" coords="354,20,424,41" href="/sasktel.php">
-<area shape="rect" coords="0,41,70,61" href="/att.php">
-<area shape="rect" coords="70,41,141,61" href="/qwest.php">
-<area shape="rect" coords="141,41,212,61" href="/edge.php">
-<area shape="rect" coords="212,41,283,61" href="/dobson.php">
-<area shape="rect" coords="283,41,354,61" href="/aliant.php">
-<area shape="rect" coords="354,41,424,61" href="/bell.php">
-</map><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr>
-<td width="337" align="left" valign="bottom"><a href="/"><img src="http://img.freeringers.net/images/FreeRingers4.gif" width="337" height="64" border="0"></a><br></td>
+<table width="777" cellspacing="0" cellpadding="2" border="0"><tbody><tr><td nowrap="">
+<table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr>
+<td width="337" align="left" valign="middle"><a href="/"><img src="http://img.freeringers.net/images/FreeRingers4.gif" width="337" height="64" border="0"></a><br></td>
 
 <td width="8"><img src="http://img.freeringers.net/images/space.gif" width="8" height="1" border="0"></td>
 <td width="424" align="left" valign="bottom" nowrap="">
-<span class="small">FreeRingers.net works with the following cellular companies and <a href="/phones.php"><span class="small"><u>many others</u></span></a>...</span><br>
-<a href="/phones.php"><img src="http://img.freeringers.net/images/carriers.gif" width="424" height="61" border="0" alt="Compatible Cellular Networks" usemap="#cellmap"><br>
+<a href="/phones.php"><img src="http://img.freeringers.net/images/carriers2.gif" width="424" height="82" border="0" alt="Compatible Cellular Networks"><br>
 </a></td>
-
-
 
 </tr></tbody></table>
 
 </td>
 
 </tr><tr>
-<td width="155" valign="top" style="min-width:155px">
-<img src="http://img.freeringers.net/images/space.gif" width="145" height="1" border="0"><br>
-
-
-<table width="100%" height="100%" cellspacing="1" cellpadding="3" border="0" bgcolor="#3B7DC5"><tbody><tr><td colspan="1" height="1%" bgcolor="#72AAEA" nowrap="" style="padding:2px"><font color="#FFFFFF" style="text-decoration:bold; font-size:13px"><b>&nbsp;Site Navigation&nbsp;</b></font></td></tr><tr><td colspan="1" valign="top" bgcolor="#F1F5FC">
-
-• <a href="/">Home Page</a><br>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="2" border="0"><br>
-• <a href="/phones.php">Compatible Phones</a><br>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="2" border="0"><br>
-• <a href="/compare.php">Compare Our Service</a><br>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="2" border="0"><br>
-• <a href="/testimonials.php">Testimonials</a><br>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="2" border="0"><br>
-• <a href="/support.php?fa67071a732f756b95e4e240a255d82d">Support/Contact</a><br>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="2" border="0"><br>
-
-<center><a href="/order.php"><img src="http://img.freeringers.net/images/buynow.gif" width="135" height="28" vspace="10" border="0" alt="Order Unlimited Free Downloads"></a></center>
-
-• <a href="/members/?fa67071a732f756b95e4e240a255d82d">Member Login</a><br>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="2" border="0"><br>
-• <a href="/lostpw.php">Lost Password</a><br>
-
-</td></tr></tbody></table>
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="9" border="0"><br>
-<table width="100%" height="100%" cellspacing="1" cellpadding="1" border="0" bgcolor="#3B7DC5"><tbody><tr><td colspan="1" height="1%" bgcolor="#72AAEA" nowrap="" style="padding:2px"><font color="#FFFFFF" style="text-decoration:bold; font-size:13px"><b>&nbsp;Top Real Music&nbsp;</b></font></td></tr><tr><td colspan="1" valign="top" bgcolor="#F1F5FC">
-<table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td nowrap="">
-<span class="small">
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14"><a href="/christmas.php"><font color="#076607"><span class="small">Christmas Ringtones</span></font></a><br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">When I'm Gone<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Run It!<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Hung Up<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">All I Want For Christmas..<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Laffy Taffy<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">My Humps<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Gold Digger<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Photograph<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Grillz<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Seasons Of Love<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Stickwitu<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Dance, Dance<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Soul Survivor<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">There It Go!<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">We Be Burnin'<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">You're Beautiful<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Because Of You<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Stay Fly<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Don't Bother<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Sugar, We're Goin Down<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Dirty Little Secret<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">I'm Sprung<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Feel Good Inc<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Ring Of Fire<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">You And Me<br>
-<img src="http://img.freeringers.net/images/notes.gif" align="absmiddle" width="14" height="14">Any CD or MP3<br>
-</span>
-</td></tr></tbody></table>
-
-</td></tr></tbody></table>
-
-
-<img src="http://img.freeringers.net/images/space.gif" width="1" height="9" border="0"><br>
+<td width="777" valign="top" style="min-width:777px">
+<img src="http://img.freeringers.net/images/space.gif" width="777" height="1" border="0"><br>
 
 
 
-<table width="100%" height="100%" cellspacing="1" cellpadding="3" border="0" bgcolor="#3B7DC5"><tbody><tr><td colspan="1" height="1%" bgcolor="#72AAEA" nowrap="" style="padding:2px"><font color="#FFFFFF" style="text-decoration:bold; font-size:13px"><b>&nbsp;User Statistics&nbsp;</b></font></td></tr><tr><td colspan="1" valign="top" bgcolor="#F1F5FC">
 
-<center><table cellspacing="0" cellpadding="0" border="0" width="100%">
-<tbody><tr><td align="right" nowrap=""><span class="small"><b>1,530</b></span></td><td align="left" valign="bottom" nowrap=""><span class="small">&nbsp;Users Online</span></td></tr>
-<tr><td align="right" nowrap=""><span class="small"><b>6.2</b></span></td><td align="left" valign="bottom" nowrap=""><span class="small">&nbsp;Million Downloads</span></td></tr>
-</tbody></table></center>
-</td></tr></tbody></table>
+<table width="100%" cellpadding="0" cellspacing="0" border="0">
+<tbody><tr>
+<td width="25%" valign="bottom"><table width="100%" cellpadding="4" cellspacing="1" border="0" bgcolor="#000000"><tbody><tr><th bgcolor="#8DBDF1" nowrap="" background="http://img.freeringers.net/images/tab0.gif"><a href="/polyphonic.php"><font face="arial" style="text-decoration:bold; font-size:13px">Polyphonic Ringtones</font></a></th></tr></tbody></table></td>
+<td width="25%" valign="bottom"><table width="100%" cellpadding="4" cellspacing="1" border="0" bgcolor="#000000"><tbody><tr><th bgcolor="#8DBDF1" nowrap="" background="http://img.freeringers.net/images/tab0.gif"><a href="/realmusic.php"><font face="arial" style="text-decoration:bold; font-size:13px">Real Music Ringtones</font></a></th></tr></tbody></table></td>
+<td width="25%" valign="bottom"><table width="100%" cellpadding="4" cellspacing="1" border="0" bgcolor="#000000"><tbody><tr><th bgcolor="#8DBDF1" nowrap="" background="http://img.freeringers.net/images/tab0.gif"><a href="/wallpaper.php"><font face="arial" style="text-decoration:bold; font-size:13px">Wallpapers</font></a></th></tr></tbody></table></td>
+<td width="25%" valign="bottom"><table width="100%" cellpadding="5" cellspacing="1" border="0" bgcolor="#000000"><tbody><tr><th bgcolor="#3B7DC5" nowrap="" background="http://img.freeringers.net/images/tab1.gif"><a href="/phones.php"><font face="arial" style="text-decoration:bold; font-size:13px" color="#FFFFFF">Compatible Phones</font></a></th></tr></tbody></table></td>
+</tr>
+
+<tr>
+<td colspan="5">
+
+<table width="100%" cellpadding="1" cellspacing="1" border="0" bgcolor="#3B7DC5"><tbody><tr>
+<td bgcolor="#F1F5FC" align="center" width="14%" nowrap=""><a href="/">Home</a></td>
+<td bgcolor="#FDC7C7" align="center" width="14%" nowrap=""><a href="/order.php"><b>Register</b></a></td>
+<td bgcolor="#F1F5FC" align="center" width="14%" nowrap=""><a href="/compare.php">Compare</a></td>
+<td bgcolor="#F1F5FC" align="center" width="14%" nowrap=""><a href="/testimonials.php">Testimonials</a></td>
+<td bgcolor="#F1F5FC" align="center" width="15%" nowrap=""><a href="/support.php?c66bfdff0e5959169c457302973869bb">Support/Contact</a></td>
+<td bgcolor="#F1F5FC" align="center" width="14%" nowrap=""><a href="/members/?c66bfdff0e5959169c457302973869bb">Member Login</a></td>
+<td bgcolor="#F1F5FC" align="center" width="15%" nowrap=""><a href="/lostpw.php">Lost Password</a></td>
+</tr></tbody></table>
+
+</td>
+</tr></tbody></table>
 
 
-</td><td width="614" valign="top" style="min-width:614px">
-<img src="http://img.freeringers.net/images/space.gif" width="604" height="1" border="0"><br><table width="100%" height="100%" cellspacing="1" cellpadding="5" border="0" bgcolor="#3B7DC5"><tbody><tr><td colspan="1" height="1%" bgcolor="#3B7DC5" nowrap="" style="padding:2px"><font color="#FFFFFF" style="text-decoration:bold; font-size:13px"><b>&nbsp;Privacy Notice&nbsp;</b></font></td></tr><tr><td colspan="1" valign="top" bgcolor="#F1F5FC">
+</td>
+</tr><tr>
+<td width="777" valign="top" style="min-width:777px">
+<img src="http://img.freeringers.net/images/space.gif" width="777" height="1" border="0"><br><table width="100%" height="100%" cellspacing="1" cellpadding="5" border="0" bgcolor="#3B7DC5"><tbody><tr><td colspan="1" height="1%" bgcolor="#3B7DC5" nowrap="" style="padding:2px"><font color="#FFFFFF" style="text-decoration:bold; font-size:13px"><b>&nbsp;Privacy Notice&nbsp;</b></font></td></tr><tr><td colspan="1" valign="top" bgcolor="#F1F5FC">
 
 <br>
 Effective <b>09/01/2004</b>
@@ -239,13 +179,12 @@ Should you have other questions or concerns about these privacy policies, please
 </td></tr>
 <tr><td colspan="2" align="center" nowrap="" style="padding:0px;">
 
-<div style="border:1px solid #ccc;border-width:0 0 1px;height:1px"></div>
 <span class="small">
-Copyright © Webmart LLC, 2002-2005. All rights reserved.
+Copyright © Webmart LLC, 2002-2006. All rights reserved.
 By using FreeRingers.net you agree to our <a href="/terms.php"><span class="small">Terms And Conditions</span></a>.<br>
-All logos, trademarks, and servicemarks are property of their respective owners and are not affiliated with FreeRingers.net.
+All logos, trademarks, servicemarks, and artist names are property of their respective owners and are not affiliated with FreeRingers.net.
 <a href="/privacy.php" class="small"><span class="small">Privacy Notice</span></a>
-</span>
+<br>¹ Lifetime membership: You only pay <u>once</u>, we <u>never</u> bill you again, and your membership lasts <u>forever</u>!</span>
 <br><img src="http://img.freeringers.net/images/space.gif" width="777" height="1" border="0"><br>
 
 </td></tr></tbody></table>
