--- a/i/in/inf/informatica.com.html
+++ b/i/in/inf/informatica.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the informatica.com privacy policy that was archived on 2005-03-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050308132056id_/http%3A//www.informatica.com/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the informatica.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615041246id_/http%3A//www.informatica.com/company/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Company: Privacy Policy</title>
@@ -54,12 +54,9 @@ var s_eVar4=""
 var s_eVar5=""
 /********* INSERT THE DOMAIN AND PATH TO YOUR CODE BELOW ************/
 
-//--></script><script language="JavaScript" src="/nr/internet_2004/javascript/s_code_remote.js"></script><img name="s_i_informaticacom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/informaticacom/1/G.7-PD-R/s95082039044332?[AQB]&amp;ndh=1&amp;t=31/0/2020%2010%3A8%3A48%205%200&amp;pageName=Company%3A%20Privacy%20Policy&amp;g=https%3A//web.archive.org/web/20050308132056id_/http%253A//www.informatica.com/company/privacy.htm&amp;ch=company&amp;cc=USD&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+//--></script><script language="JavaScript" src="/nr/internet_2004/javascript/s_code_remote.js"></script><img name="s_i_informaticacom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/informaticacom/1/G.7-PD-R/s99699416003345?[AQB]&amp;ndh=1&amp;t=31/0/2020%2010%3A8%3A45%205%200&amp;pageName=Company%3A%20Privacy%20Policy&amp;g=https%3A//web.archive.org/web/20060615041246id_/http%253A//www.informatica.com/company/privacy.htm&amp;ch=company&amp;cc=USD&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 
 <!-- End SiteCatalyst code version: G.7. -->
-
-
-
 
 
 
@@ -126,7 +123,7 @@ var s_eVar5=""
 
   <tbody><tr>
     <td><a href="/default.htm"><img src="/nr/internet_2004/images/common/logo.gif" width="200" height="59" alt="Informatica" border="0"></a></td>
-	<td><img src="/nr/internet_2004/images/common/logo_right.gif" width="570" height="59" border="0"></td>
+	<td><img src="/nr/internet_2004/images/common/logo_right.gif" width="570" height="59" border="0" alt="The Data Integration Company"></td>
   </tr>
 </tbody></table>
 <table cellpadding="0" cellspacing="0" border="0" width="770" id="printdontshow2">
@@ -279,7 +276,7 @@ var s_eVar5=""
   	<td class="footer">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-		<a href="/company/trademarks.htm" class="footer">©</a> 2005 Informatica Corporation. All rights reserved
+		<a href="/company/trademarks.htm" class="footer">©</a> 2006 Informatica Corporation, The Data Integration Company. All rights reserved
 	</td>
     <td class="footer" height="22" align="right">
 	    <a href="/company/contact_us/default.htm" class="footer">Contact Us</a> &nbsp;|&nbsp;
@@ -301,12 +298,14 @@ var s_eVar5=""
   <tr>
   	<td>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		© 2005 Informatica Corporation. All rights reserved
+		© 2006 Informatica Corporation, The Data Integration Company. All rights reserved
 	</td>
   </tr>
 </tbody></table>
 <!-- End Print Foot -->
 <!-- End footer -->
+
+<script type="text/javascript" src="http://ai.aintermail.net/inf.th.shtml"></script>
 
 
 
